--- a/server/web2/package.json
+++ b/server/web2/package.json
@@ -11,6 +11,7 @@
   "type": "commonjs",
   "description": "",
   "dependencies": {
+    "@prisma/client": "^6.5.0",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
     "cloudinary": "^2.6.0",
@@ -21,6 +22,7 @@
   "devDependencies": {
     "@types/multer": "^1.4.12",
     "@types/node": "^22.13.13",
-    "dotenv": "^16.4.7"
+    "dotenv": "^16.4.7",
+    "prisma": "^6.5.0"
   }
 }
