--- a/server/web2/package.json
+++ b/server/web2/package.json
@@ -17,7 +17,8 @@
     "cloudinary": "^2.6.0",
     "cors": "^2.8.5",
     "express": "^4.21.2",
-    "multer": "^1.4.5-lts.2"
+    "multer": "^1.4.5-lts.2",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@types/multer": "^1.4.12",
