--- a/server/web2/package.json
+++ b/server/web2/package.json
@@ -14,6 +14,7 @@
     "@prisma/client": "^6.5.0",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
+    "axios": "^1.8.4",
     "cloudinary": "^2.6.0",
     "cors": "^2.8.5",
     "express": "^4.21.2",
