--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,181 @@
 {
-  "devDependencies": {
+  "name": "server",
+  "version": "1.0.0",
+  "description": "",
+  "main": "truffle-config.js",
+  "dependencies": {
+    "@types/express": "^5.0.1",
+    "accepts": "^1.3.8",
+    "aes-js": "^4.0.0-beta.5",
+    "ansi-colors": "^4.1.3",
+    "ansi-regex": "^6.1.0",
+    "ansi-styles": "^4.3.0",
+    "anymatch": "^3.1.3",
+    "argparse": "^2.0.1",
+    "array-flatten": "^1.1.1",
+    "assertion-error": "^2.0.1",
+    "balanced-match": "^1.0.2",
+    "binary-extensions": "^2.3.0",
+    "body-parser": "^1.20.3",
+    "brace-expansion": "^2.0.1",
+    "braces": "^3.0.3",
+    "browser-stdout": "^1.3.1",
+    "bytes": "^3.1.2",
+    "call-bind-apply-helpers": "^1.0.2",
+    "call-bound": "^1.0.4",
+    "camelcase": "^6.3.0",
     "chai": "^5.2.0",
+    "chalk": "^4.1.2",
+    "check-error": "^2.1.1",
+    "chokidar": "^3.6.0",
+    "cliui": "^8.0.1",
+    "color-convert": "^2.0.1",
+    "color-name": "^1.1.4",
+    "content-disposition": "^0.5.4",
+    "content-type": "^1.0.5",
+    "cookie": "^0.7.1",
+    "cookie-signature": "^1.0.6",
+    "cross-spawn": "^7.0.6",
+    "debug": "^4.4.0",
+    "decamelize": "^4.0.0",
+    "deep-eql": "^5.0.2",
+    "depd": "^2.0.0",
+    "destroy": "^1.2.0",
+    "diff": "^5.2.0",
+    "dotenv": "^16.4.7",
+    "dunder-proto": "^1.0.1",
+    "eastasianwidth": "^0.2.0",
+    "ee-first": "^1.1.1",
+    "emoji-regex": "^9.2.2",
+    "encodeurl": "^2.0.0",
+    "es-define-property": "^1.0.1",
+    "es-errors": "^1.3.0",
+    "es-object-atoms": "^1.1.1",
+    "escalade": "^3.2.0",
+    "escape-html": "^1.0.3",
+    "escape-string-regexp": "^4.0.0",
+    "etag": "^1.8.1",
+    "ethers": "^6.13.5",
+    "express": "^4.21.2",
+    "fill-range": "^7.1.1",
+    "finalhandler": "^1.3.1",
+    "find-up": "^5.0.0",
+    "flat": "^5.0.2",
+    "foreground-child": "^3.3.1",
+    "forwarded": "^0.2.0",
+    "fresh": "^0.5.2",
+    "function-bind": "^1.1.2",
     "ganache": "^7.9.2",
-    "mocha": "^11.1.0"
-  }
+    "get-caller-file": "^2.0.5",
+    "get-intrinsic": "^1.3.0",
+    "get-proto": "^1.0.1",
+    "glob": "^10.4.5",
+    "glob-parent": "^5.1.2",
+    "gopd": "^1.2.0",
+    "has-flag": "^4.0.0",
+    "has-symbols": "^1.1.0",
+    "hasown": "^2.0.2",
+    "he": "^1.2.0",
+    "http-errors": "^2.0.0",
+    "iconv-lite": "^0.4.24",
+    "inherits": "^2.0.4",
+    "ipaddr.js": "^1.9.1",
+    "is-binary-path": "^2.1.0",
+    "is-extglob": "^2.1.1",
+    "is-fullwidth-code-point": "^3.0.0",
+    "is-glob": "^4.0.3",
+    "is-number": "^7.0.0",
+    "is-plain-obj": "^2.1.0",
+    "is-unicode-supported": "^0.1.0",
+    "isexe": "^2.0.0",
+    "jackspeak": "^3.4.3",
+    "js-yaml": "^4.1.0",
+    "locate-path": "^6.0.0",
+    "log-symbols": "^4.1.0",
+    "loupe": "^3.1.3",
+    "lru-cache": "^10.4.3",
+    "math-intrinsics": "^1.1.0",
+    "media-typer": "^0.3.0",
+    "merge-descriptors": "^1.0.3",
+    "methods": "^1.1.2",
+    "mime": "^1.6.0",
+    "mime-db": "^1.52.0",
+    "mime-types": "^2.1.35",
+    "minimatch": "^5.1.6",
+    "minipass": "^7.1.2",
+    "ms": "^2.1.3",
+    "negotiator": "^0.6.3",
+    "normalize-path": "^3.0.0",
+    "object-inspect": "^1.13.4",
+    "on-finished": "^2.4.1",
+    "p-limit": "^3.1.0",
+    "p-locate": "^5.0.0",
+    "package-json-from-dist": "^1.0.1",
+    "parseurl": "^1.3.3",
+    "path-exists": "^4.0.0",
+    "path-key": "^3.1.1",
+    "path-scurry": "^1.11.1",
+    "path-to-regexp": "^0.1.12",
+    "pathval": "^2.0.0",
+    "picomatch": "^2.3.1",
+    "proxy-addr": "^2.0.7",
+    "qs": "^6.13.0",
+    "randombytes": "^2.1.0",
+    "range-parser": "^1.2.1",
+    "raw-body": "^2.5.2",
+    "readdirp": "^3.6.0",
+    "require-directory": "^2.1.1",
+    "safe-buffer": "^5.2.1",
+    "safer-buffer": "^2.1.2",
+    "send": "^0.19.0",
+    "serialize-javascript": "^6.0.2",
+    "serve-static": "^1.16.2",
+    "setprototypeof": "^1.2.0",
+    "shebang-command": "^2.0.0",
+    "shebang-regex": "^3.0.0",
+    "side-channel": "^1.1.0",
+    "side-channel-list": "^1.0.0",
+    "side-channel-map": "^1.0.1",
+    "side-channel-weakmap": "^1.0.2",
+    "signal-exit": "^4.1.0",
+    "statuses": "^2.0.1",
+    "string-width": "^5.1.2",
+    "string-width-cjs": "^4.2.3",
+    "strip-ansi": "^7.1.0",
+    "strip-ansi-cjs": "^6.0.1",
+    "strip-json-comments": "^3.1.1",
+    "supports-color": "^8.1.1",
+    "to-regex-range": "^5.0.1",
+    "toidentifier": "^1.0.1",
+    "tslib": "^2.7.0",
+    "type-is": "^1.6.18",
+    "typescript": "^5.8.2",
+    "undici-types": "^6.19.8",
+    "unpipe": "^1.0.0",
+    "utils-merge": "^1.0.1",
+    "vary": "^1.1.2",
+    "which": "^2.0.2",
+    "workerpool": "^6.5.1",
+    "wrap-ansi": "^8.1.0",
+    "wrap-ansi-cjs": "^7.0.0",
+    "ws": "^8.17.1",
+    "y18n": "^5.0.8",
+    "yargs": "^17.7.2",
+    "yargs-parser": "^21.1.1",
+    "yargs-unparser": "^2.0.0",
+    "yocto-queue": "^0.1.0"
+  },
+  "devDependencies": {
+    "mocha": "^11.1.0",
+    "tsc-watch": "^6.2.1"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc -b",
+    "start": "node dist/server.js",
+    "dev": "tsc-watch --onSuccess 'node dist/server.js'"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
