--- a/server/package.json
+++ b/server/package.json
@@ -3,8 +3,11 @@
   "version": "1.0.0",
   "description": "",
   "main": "truffle-config.js",
-  "dependencies": {
+  "dependencies": {    
+    "@prisma/client": "^6.5.0",
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
+    "@types/multer": "^1.4.12",
     "accepts": "^1.3.8",
     "aes-js": "^4.0.0-beta.5",
     "ansi-colors": "^4.1.3",
@@ -14,6 +17,7 @@
     "argparse": "^2.0.1",
     "array-flatten": "^1.1.1",
     "assertion-error": "^2.0.1",
+    "axios": "^1.8.4",
     "balanced-match": "^1.0.2",
     "binary-extensions": "^2.3.0",
     "body-parser": "^1.20.3",
@@ -29,12 +33,14 @@
     "check-error": "^2.1.1",
     "chokidar": "^3.6.0",
     "cliui": "^8.0.1",
+    "cloudinary": "^2.6.0",
     "color-convert": "^2.0.1",
     "color-name": "^1.1.4",
     "content-disposition": "^0.5.4",
     "content-type": "^1.0.5",
     "cookie": "^0.7.1",
     "cookie-signature": "^1.0.6",
+    "cors": "^2.8.5",
     "cross-spawn": "^7.0.6",
     "debug": "^4.4.0",
     "decamelize": "^4.0.0",
@@ -104,6 +110,7 @@
     "minimatch": "^5.1.6",
     "minipass": "^7.1.2",
     "ms": "^2.1.3",
+    "multer": "^1.4.5-lts.2",
     "negotiator": "^0.6.3",
     "normalize-path": "^3.0.0",
     "object-inspect": "^1.13.4",
@@ -163,11 +170,18 @@
     "yargs": "^17.7.2",
     "yargs-parser": "^21.1.1",
     "yargs-unparser": "^2.0.0",
-    "yocto-queue": "^0.1.0"
+    "yocto-queue": "^0.1.0",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
+    "chai": "^5.2.0",
+    "ganache": "^7.9.2",
     "mocha": "^11.1.0",
-    "tsc-watch": "^6.2.1"
+    "tsc-watch": "^6.2.1",
+    "@types/multer": "^1.4.12",
+    "@types/node": "^22.13.13",
+    "dotenv": "^16.4.7",
+    "prisma": "^6.5.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
