--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "truffle-config.js",
-  "dependencies": {    
+  "dependencies": {
     "@prisma/client": "^6.5.0",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
@@ -174,20 +174,20 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
-    "chai": "^5.2.0",
-    "ganache": "^7.9.2",
-    "mocha": "^11.1.0",
-    "tsc-watch": "^6.2.1",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.13.13",
+    "chai": "^5.2.0",
     "dotenv": "^16.4.7",
-    "prisma": "^6.5.0"
+    "ganache": "^7.9.2",
+    "mocha": "^11.1.0",
+    "prisma": "^6.5.0",
+    "tsc-watch": "^6.2.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc -b",
     "start": "node dist/server.js",
-    "dev": "tsc-watch --onSuccess 'node dist/server.js'"
+    "dev": "tsc-watch --onSuccess \"node dist/server.js\""
   },
   "keywords": [],
   "author": "",
