--- a/web/package.json
+++ b/web/package.json
@@ -18,15 +18,17 @@
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "framer-motion": "^12.5.0",
+    "framer-motion": "^12.6.3",
     "lucide-react": "^0.483.0",
+    "motion": "^12.6.3",
     "next": "15.2.4",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.8",
     "react-toastify": "^11.0.5",
-    "tailwind-merge": "^3.0.2",
+    "simplex-noise": "^4.0.3",
+    "tailwind-merge": "^3.1.0",
     "tw-animate-css": "^1.2.4",
     "zod": "^3.24.2"
   },
